--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <title>One Barn - Horse Training Platform</title>
+    <title>One Barn AI - Horse Training Platform</title>
   </head>
   <body>
     <div id="root"></div>
